refactor: remove deprecated backend APIs