@@ -1,21 +1,23 @@
 package com.wzh.blog.util;
 
 import com.alibaba.fastjson2.JSON;
+import com.alibaba.fastjson2.JSONArray;
+import com.alibaba.fastjson2.JSONObject;
 import eu.bitwalker.useragentutils.UserAgent;
 
 import jakarta.servlet.http.HttpServletRequest;
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.URL;
-import java.util.List;
-import java.util.Map;
+import java.net.URI;
+import java.net.URLEncoder;
+import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 
 /**
  * ip工具类
  *
  * @author 11921
  */
-@SuppressWarnings("all")
 public class IpUtils {
 
     /**
@@ -57,18 +59,28 @@ public class IpUtils {
      * @return 解析后的ip地址
      */
     public static String getIpSource(String ipAddress) {
+        String endpoint = "https://opendata.baidu.com/api.php?query="
+                + URLEncoder.encode(ipAddress, StandardCharsets.UTF_8)
+                + "&co=&resource_id=6006&oe=utf8";
         try {
-            URL url = new URL("http://opendata.baidu.com/api.php?query=" + ipAddress + "&co=&resource_id=6006&oe=utf8");
-            BufferedReader reader = new BufferedReader(new InputStreamReader(url.openConnection().getInputStream(), "utf-8"));
-            String line = null;
-            StringBuffer result = new StringBuffer();
-            while ((line = reader.readLine()) != null) {
-                result.append(line);
+            URLConnection connection = URI.create(endpoint).toURL().openConnection();
+            connection.setConnectTimeout(2000);
+            connection.setReadTimeout(2000);
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(
+                    connection.getInputStream(), StandardCharsets.UTF_8))) {
+                String line;
+                StringBuilder result = new StringBuilder();
+                while ((line = reader.readLine()) != null) {
+                    result.append(line);
+                }
+                JSONObject response = JSON.parseObject(result.toString());
+                JSONArray data = response.getJSONArray("data");
+                if (data == null || data.isEmpty()) {
+                    return "";
+                }
+                JSONObject location = data.getJSONObject(0);
+                return location == null ? "" : location.getString("location");
             }
-            reader.close();
-            Map map = JSON.parseObject(result.toString(), Map.class);
-            List<Map<String, String>> data = (List) map.get("data");
-            return data.get(0).get("location");
         } catch (Exception e) {
             return "";
         }
